LAST FEW UPDATES

--- a/Website/views/frontend/index.ejs
+++ b/Website/views/frontend/index.ejs
@@ -46,19 +46,17 @@
             
         </span></label>
         <ul>
-            <li><a class="active nava" href="index.html" style="text-decoration: none;">Home</a></li>
+            <!-- <li><a class="active nava" href="app.js" style="text-decoration: none;">Home</a></li> -->
             <li><a href="HelpAgeIndia" class="nava" style="text-decoration: none;">NGOs</a></li>
             <li><a href="blog" class="nava" style="text-decoration: none;">Blog</a></li>
             <li><a href="shoppingindex" class="nava" style="text-decoration: none;">Products(Covid)</a></li>
-            <li><a href="weather" class="nava" style="text-decoration: none;">Weather</a></li>
+            <!-- <li><a href="weather" class="nava" style="text-decoration: none;">Weather</a></li> -->
             <li><a href="payment" class="nava" style="text-decoration: none;">Donate</a></li>
-            <li><a href="#fact" class="nava" id="reach" style="text-decoration: none;" onclick="fn5()">Reach</a></li>
+            <!-- <li><a href="#fact" class="nava" id="reach" style="text-decoration: none;" onclick="fn5()">Reach</a></li> -->
             <li><a href="signup" class="nava" style="text-decoration: none;">SignUp/Login </a></li>
-
-
         </ul>
     </nav>
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" style="top: 81px;">
+    <!-- <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" style="top: 81px;">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -69,7 +67,6 @@
                 <img src="new.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-solid d-md-block">
                     <h5>CHEERFULL</h5>
-                    <!-- <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p> -->
                 </div>
             </div>
             <div class="carousel-item">
@@ -95,7 +92,7 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
-    </div>
+    </div> -->
 
 
 
