--- a/Website/public/index.css
+++ b/Website/public/index.css
@@ -94,11 +94,10 @@ body {
     scroll-behavior: smooth;
 }
 
-nav {
-    /* background: #000000; */
+/* nav {
     height: 80px;
     width: 100%;
-}
+} */
 
 
 /*label.logo{
@@ -115,8 +114,7 @@ nav ul {
 
 nav ul li {
     display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
+    margin: 0 0px;
     text-decoration: none;
 }
 
@@ -168,7 +166,7 @@ nav ul li a {
     ul {
         position: fixed;
         width: 100%;
-        height: 100vh;
+        /* height: 100vh; */
         background: #2c3e50;
         top: 80px;
         left: -100%;
@@ -177,7 +175,7 @@ nav ul li a {
     }
     nav ul li {
         display: block;
-        margin: 50px 0;
+        margin: 0px 0;
         line-height: 30px;
     }
     nav ul li a {
