--- a/Website/views/frontend/index.ejs
+++ b/Website/views/frontend/index.ejs
@@ -98,8 +98,8 @@
 
     <div class="jumbotron jumbotron-fluid jumbo1">
         <div class="container">
-            <h1 class="display-4 disp">Our Moto</h1>
-            <p class="lead text1"> We can't help Everyone, But Everyone can help someone!</p>
+            <h1 class="display-4 disp">Our Motto</h1>
+            <p class="lead text1"> We can't help everyone, but everyone can help someone!</p>
         </div>
     </div>
     <div>
@@ -169,12 +169,12 @@
                         <ul>
                             <li>
 
-                                Health check-up camp conducted for members of our associated NGO HelpAge India. --- <b>30th Sep 2020</b>
+                                Health check-up camp conducted for members of our associated NGO HelpAge India. --- <b>30th Sep 2022</b>
                             </li>
                             <br>
                             <li>
 
-                                Workshop for the elderly, CRAFT, here our members of HelpAge India showcase their work, and creativity. ---<b>5th Oct 2020</b>
+                                Workshop for the elderly, CRAFT, here our members of HelpAge India showcase their work, and creativity. ---<b>5th Oct 2022</b>
                             </li>
                             <br>
                             <li>
@@ -184,7 +184,7 @@
                             <br>
                             <li>
 
-                                Art and drawing competition for children of WeCare.The children came up with things which they found beautiful or inspiring. Many drew from nature and many picked things and instances from their daily lives. ---<b>10th Oct 2020</b>
+                                Art and drawing competition for children of WeCare.The children came up with things which they found beautiful or inspiring. Many drew from nature and many picked things and instances from their daily lives. ---<b>10th Oct 2022</b>
                             </li>
 
 
