--- a/Website/views/frontend/blog.ejs
+++ b/Website/views/frontend/blog.ejs
@@ -82,7 +82,7 @@
             </div>
             <div class="col-md-5">
                 <h3>How do we help put India’s railway children back on track?</h3>
-                <p>Samar Hafeez / August 20, 2020</p>
+                <p>Rujul Srivastava / August 20, 2022</p>
                 <div>
                     </a>
                     <p>Over one lakh are found on station platforms each year All across India, over 1 crore children live on the streets. Nearly 1.2 lakh children amongst them are found on railway platforms each year. Every five minutes a child arrives
@@ -109,7 +109,7 @@
             </div>
             <div class="col-md-5">
                 <h3>India’s population of malnourished children set to grow</h3>
-                <p>Safar Hussain</p>
+                <p>Eshan Bajaj</p>
                 </a>
                 <p>With schools shut, the pandemic has also robbed them of midday meals INDIA accounts for over a third of the world’s population of malnourished children – one in every three children in the country fall into that category. And this was
                     even before the coronavirus struck. Now experts fear the numbers will be catastrophic. Naina…</p>
@@ -132,7 +132,7 @@
             </div>
             <div class="col-md-5">
                 <h3>Underprivileged Children’s Health At Higher Risk Due To The Pandemic</h3>
-                <p>Anonymous</p>
+                <p>Megha Maitin</p>
                 </a>
                 <p>
                     <p>
